# CPP_VSCode_DevContainer

./: .gitignore  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
test/: CMakeLists.txt  Tests.cpp
